모바일 작업

--- a/mobile/resources/html/guide.html
+++ b/mobile/resources/html/guide.html
@@ -27,20 +27,17 @@
 	<ul class="sorting_list">
 		<li>
 			<div class="check_box_set">
-				<input id="checkbox1" type="checkbox">
-				<label for="checkbox1">즐겨찾기</label>
+				<input id="checkbox1" type="checkbox"> <label for="checkbox1">즐겨찾기</label>
 			</div>
 		</li>
 		<li>
 			<div class="check_box_set">
-				<input id="checkbox2" type="checkbox">
-				<label for="checkbox2">동의종료D-7</label>
+				<input id="checkbox2" type="checkbox"> <label for="checkbox2">동의종료D-7</label>
 			</div>
 		</li>
 		<li>
 			<div class="check_box_set">
-				<input id="checkbox3" type="checkbox">
-				<label for="checkbox3">보장분석</label>
+				<input id="checkbox3" type="checkbox"> <label for="checkbox3">보장분석</label>
 			</div>
 		</li>
 	</ul>
@@ -49,26 +46,22 @@
 		<ul class="sorting_list">
 			<li>
 				<div class="check_box_set bg_type">
-					<input id="checkbox21" type="checkbox">
-					<label for="checkbox21">즐겨찾기</label>
+					<input id="checkbox21" type="checkbox"> <label for="checkbox21">즐겨찾기</label>
 				</div>
 			</li>
 			<li>
 				<div class="check_box_set bg_type">
-					<input id="checkbox22" type="checkbox">
-					<label for="checkbox22">동의종료D-7</label>
+					<input id="checkbox22" type="checkbox"> <label for="checkbox22">동의종료D-7</label>
 				</div>
 			</li>
 			<li>
 				<div class="check_box_set bg_type">
-					<input id="checkbox23" type="checkbox">
-					<label for="checkbox23">보장분석</label>
+					<input id="checkbox23" type="checkbox"> <label for="checkbox23">보장분석</label>
 				</div>
 			</li>
 			<li>
 				<div class="check_box_set bg_type no_label">
-					<input id="checkbox24" type="checkbox">
-					<label for="checkbox24"></label>
+					<input id="checkbox24" type="checkbox"> <label for="checkbox24"></label>
 				</div>
 			</li>
 		</ul>
@@ -78,26 +71,22 @@
 	<ul class="sorting_list">
 		<li>
 			<div class="radio_set">
-				<input id="radio1" type="radio">
-				<label for="radio1">즐겨찾기</label>
+				<input id="radio1" type="radio"> <label for="radio1">즐겨찾기</label>
 			</div>
 		</li>
 		<li>
 			<div class="radio_set">
-				<input id="radio2" type="radio">
-				<label for="radio2">동의종료D-7</label>
+				<input id="radio2" type="radio"> <label for="radio2">동의종료D-7</label>
 			</div>
 		</li>
 		<li>
 			<div class="radio_set">
-				<input id="radio3" type="radio">
-				<label for="radio3">보장분석</label>
+				<input id="radio3" type="radio"> <label for="radio3">보장분석</label>
 			</div>
 		</li>
 		<li>
 			<div class="radio_set no_label">
-				<input id="radio4" type="radio">
-				<label for="radio4"></label>
+				<input id="radio4" type="radio"> <label for="radio4"></label>
 			</div>
 		</li>
 	</ul>
@@ -127,8 +116,7 @@
 <h2 class="guide_title">button</h2>
 <div class="guide_content">
 	<h3 class="in_title">기본형</h3>
-	<a class="btn_text fill_red" href="#"><span>확인1111</span></a>
-	<a class="btn_text" href="#"><span>설정 초기화</span></a>
+	<a class="btn_text fill_red" href="#"><span>확인1111</span></a> <a class="btn_text" href="#"><span>설정 초기화</span></a>
 	<h3 class="in_title">size_small</h3>
 	<a class="btn_text size_small" href="#"><span>자세히보기</span></a>
 	<h3 class="in_title">size_middle</h3>
@@ -137,8 +125,7 @@
 	<button class="btn_text size_big fill_gray"><span>미리보기</span></button>
 	<button class="btn_text size_big fill_red" href="#"><span>출력하기</span></button>
 	<h3 class="in_title">btn_close</h3>
-	<a class="btn_close" href="#"><span>닫기</span></a>
-	<a class="btn_close white" href="#"><span>닫기</span></a>
+	<a class="btn_close" href="#"><span>닫기</span></a> <a class="btn_close white" href="#"><span>닫기</span></a>
 </div>
 </body>
 </html>
