--- a/mobile/resources/html/index.html
+++ b/mobile/resources/html/index.html
@@ -39,16 +39,13 @@
 		<ul class="menu_area">
 			<li class="home"><a class="home" href="#">홈으로</a></li>
 			<li class="util">
-				<a class="menu01" href="#">등록</a>
-				<a class="menu02" href="#">컨컬팅</a>
-				<a class="menu03" href="#">pdf sample</a>
+				<a class="menu01" href="#">등록</a> <a class="menu02" href="#">컨컬팅</a> <a class="menu03" href="#">pdf sample</a>
 			</li>
 		</ul>
 	</div>
 	<div class="top_bg_area">
 		<div class="name_area">
-			홍길동 설계사님<br>
-			<strong>오늘 하루도 활기찬 하루 되세요.</strong>
+			홍길동 설계사님<br> <strong>오늘 하루도 활기찬 하루 되세요.</strong>
 		</div>
 	</div>
 	<div class="content_area">
@@ -58,20 +55,17 @@
 			<ul class="sorting_list">
 				<li>
 					<div class="check_box_set bg_type">
-						<input id="checkbox1" type="checkbox">
-						<label for="checkbox1">즐겨찾기</label>
+						<input id="checkbox1" type="checkbox"> <label for="checkbox1">즐겨찾기</label>
 					</div>
 				</li>
 				<li>
 					<div class="check_box_set bg_type">
-						<input id="checkbox2" type="checkbox">
-						<label for="checkbox2">동의종료D-7</label>
+						<input id="checkbox2" type="checkbox"> <label for="checkbox2">동의종료D-7</label>
 					</div>
 				</li>
 				<li>
 					<div class="check_box_set bg_type">
-						<input id="checkbox3" type="checkbox">
-						<label for="checkbox3">보장분석</label>
+						<input id="checkbox3" type="checkbox"> <label for="checkbox3">보장분석</label>
 					</div>
 				</li>
 			</ul>
@@ -182,9 +176,7 @@
 							<div class="btn_util2">
 								<a class="btn_text size_small" href="tel:0123456789"><span>전화</span></a>
 								<a class="btn_text size_small" href="sms:0123456789"><span>문자</span></a>
-								<a class="btn_text btn_pdf size_small fill_gray" href="#">
-									<span>PDF 보기</span>
-								</a>
+								<a class="btn_text btn_pdf size_small fill_gray" href="#"> <span>PDF 보기</span> </a>
 							</div>
 						</div>
 					</div>
@@ -201,63 +193,56 @@
 								<div class="td birth">1981.05.30</div>
 								<div class="td old">32세</div>
 							</div>
-						</a>
-						<a class="item" href="#">
-							<div class="tr">
-								<div class="td name">독고영재</div>
-								<div class="td gender">남</div>
-								<div class="td birth">1981.05.30</div>
-								<div class="td old">32세</div>
-							</div>
-						</a>
-						<a class="item" href="#">
-							<div class="tr">
-								<div class="td name">김창열</div>
-								<div class="td gender">남</div>
-								<div class="td birth">1981.05.30</div>
-								<div class="td old">32세</div>
-							</div>
-						</a>
-						<a class="item" href="#">
-							<div class="tr">
-								<div class="td name">송혜교</div>
-								<div class="td gender">여</div>
-								<div class="td birth">1981.05.30</div>
-								<div class="td old">32세</div>
-							</div>
-						</a>
-						<a class="item" href="#">
-							<div class="tr">
-								<div class="td name">독고영재</div>
-								<div class="td gender">남</div>
-								<div class="td birth">1981.05.30</div>
-								<div class="td old">32세</div>
-							</div>
-						</a>
-						<a class="item" href="#">
-							<div class="tr">
-								<div class="td name">독고영재</div>
-								<div class="td gender">남</div>
-								<div class="td birth">1981.05.30</div>
-								<div class="td old">32세</div>
-							</div>
-						</a>
-						<a class="item" href="#">
-							<div class="tr">
-								<div class="td name">김창열</div>
-								<div class="td gender">남</div>
-								<div class="td birth">1981.05.30</div>
-								<div class="td old">32세</div>
-							</div>
-						</a>
-						<a class="item" href="#">
-							<div class="tr">
-								<div class="td name">송혜교</div>
-								<div class="td gender">여</div>
-								<div class="td birth">1981.05.30</div>
-								<div class="td old">32세</div>
-							</div>
-						</a>
+						</a> <a class="item" href="#">
+						<div class="tr">
+							<div class="td name">독고영재</div>
+							<div class="td gender">남</div>
+							<div class="td birth">1981.05.30</div>
+							<div class="td old">32세</div>
+						</div>
+					</a> <a class="item" href="#">
+						<div class="tr">
+							<div class="td name">김창열</div>
+							<div class="td gender">남</div>
+							<div class="td birth">1981.05.30</div>
+							<div class="td old">32세</div>
+						</div>
+					</a> <a class="item" href="#">
+						<div class="tr">
+							<div class="td name">송혜교</div>
+							<div class="td gender">여</div>
+							<div class="td birth">1981.05.30</div>
+							<div class="td old">32세</div>
+						</div>
+					</a> <a class="item" href="#">
+						<div class="tr">
+							<div class="td name">독고영재</div>
+							<div class="td gender">남</div>
+							<div class="td birth">1981.05.30</div>
+							<div class="td old">32세</div>
+						</div>
+					</a> <a class="item" href="#">
+						<div class="tr">
+							<div class="td name">독고영재</div>
+							<div class="td gender">남</div>
+							<div class="td birth">1981.05.30</div>
+							<div class="td old">32세</div>
+						</div>
+					</a> <a class="item" href="#">
+						<div class="tr">
+							<div class="td name">김창열</div>
+							<div class="td gender">남</div>
+							<div class="td birth">1981.05.30</div>
+							<div class="td old">32세</div>
+						</div>
+					</a> <a class="item" href="#">
+						<div class="tr">
+							<div class="td name">송혜교</div>
+							<div class="td gender">여</div>
+							<div class="td birth">1981.05.30</div>
+							<div class="td old">32세</div>
+						</div>
+					</a>
 					</div>
 				</div>
 				<!-- 리스트형 : e -->
