--- a/mobile/resources/html/그래프.html
+++ b/mobile/resources/html/그래프.html
@@ -213,22 +213,17 @@
 		<ul class="menu_area">
 			<li class="home"><a class="home" href="#">홈으로</a></li>
 			<li class="util">
-				<a class="menu01" href="#">등록</a>
-				<a class="menu02" href="#">컨컬팅</a>
-				<a class="menu03" href="#">pdf sample</a>
+				<a class="menu01" href="#">등록</a> <a class="menu02" href="#">컨컬팅</a> <a class="menu03" href="#">pdf sample</a>
 			</li>
 		</ul>
 		<div class="member_info_area">
 			<div class="name">
-				<strong>권은아</strong>
-				고객님
+				<strong>권은아</strong> 고객님
 				<button class="favorites">즐겨찾기</button><!--활성화 class="btn_like on"-->
 			</div>
 			<ul class="info">
 				<li>
-					<span class="sex">여</span>
-					<span class="bday">1981.05.30</span>
-					<span class="age">32세</span>
+					<span class="sex">여</span> <span class="bday">1981.05.30</span> <span class="age">32세</span>
 				</li>
 				<li>
 					<button class="btn_alert">상령일</button>
@@ -318,11 +313,21 @@
 	<div class="bottom_fixed_menu_area">
 		<button class="home"><span>고객리스트</span></button>
 		<ul>
-			<li><button class="bottom_menu menu01 on"><span>전체현황</span></button></li>
-			<li><button class="bottom_menu menu02"><span>가입현황</span></button></li>
-			<li><button class="bottom_menu menu03"><span>진단상세</span></button></li>
-			<li><button class="bottom_menu menu04"><span>컨설팅</span></button></li>
-			<li><button class="bottom_menu menu05 new"><span>그레프</span></button></li>
+			<li>
+				<button class="bottom_menu menu01 on"><span>전체현황</span></button>
+			</li>
+			<li>
+				<button class="bottom_menu menu02"><span>가입현황</span></button>
+			</li>
+			<li>
+				<button class="bottom_menu menu03"><span>진단상세</span></button>
+			</li>
+			<li>
+				<button class="bottom_menu menu04"><span>컨설팅</span></button>
+			</li>
+			<li>
+				<button class="bottom_menu menu05 new"><span>그레프</span></button>
+			</li>
 		</ul>
 	</div>
 	<!-- bottom_fixed_menu_area : e	-->
