--- a/mobile/resources/html/컨설팅.html
+++ b/mobile/resources/html/컨설팅.html
@@ -23,22 +23,17 @@
 		<ul class="menu_area">
 			<li class="home"><a class="home" href="#">홈으로</a></li>
 			<li class="util">
-				<a class="menu01" href="#">등록</a>
-				<a class="menu02" href="#">컨컬팅</a>
-				<a class="menu03" href="#">pdf sample</a>
+				<a class="menu01" href="#">등록</a> <a class="menu02" href="#">컨컬팅</a> <a class="menu03" href="#">pdf sample</a>
 			</li>
 		</ul>
 		<div class="member_info_area">
 			<div class="name">
-				<strong>권은아</strong>
-				고객님
+				<strong>권은아</strong> 고객님
 				<button class="favorites">즐겨찾기</button><!--활성화 class="btn_like on"-->
 			</div>
 			<ul class="info">
 				<li>
-					<span class="sex">여</span>
-					<span class="bday">1981.05.30</span>
-					<span class="age">32세</span>
+					<span class="sex">여</span> <span class="bday">1981.05.30</span> <span class="age">32세</span>
 				</li>
 				<li>
 					<button class="btn_alert">상령일</button>
@@ -73,7 +68,7 @@
 					<div class="result"><strong>13</strong></div>
 				</li>
 			</ul>
-			<div class="btn_area"><a href="#" class="btn_inner"><span>선택하신 컨설팅 전후 비교분석 결과를 확인해보세요!</span></a></div>
+			<div class="btn_area"><a class="btn_inner" href="#"><span>선택하신 컨설팅 전후 비교분석 결과를 확인해보세요!</span></a></div>
 		</div>
 
 		<!-- insurance_list_box : s -->
@@ -83,7 +78,7 @@
 				<div class="tit_box">
 					<h3 class="sort_tit">가계약</h3><span class="number"><strong>0</strong>건</span>
 				</div>
-				
+
 				<div class="list_box">
 					<button class="btn_contract_add">
 						<div>가계약을 등록해 주세요.</div>
@@ -96,7 +91,7 @@
 				<div class="tit_box">
 					<h3 class="sort_tit">정상계약</h3><span class="number"><strong>2</strong>건</span>
 				</div>
-				
+
 				<div class="list_box">
 					<button class="insurance"><!-- 체크시 class 'checked' 추가  -->
 						<div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
@@ -163,11 +158,21 @@
 	<div class="bottom_fixed_menu_area">
 		<button class="home"><span>고객리스트</span></button>
 		<ul>
-			<li><button class="bottom_menu menu01 on"><span>전체현황</span></button></li>
-			<li><button class="bottom_menu menu02"><span>가입현황</span></button></li>
-			<li><button class="bottom_menu menu03"><span>진단상세</span></button></li>
-			<li><button class="bottom_menu menu04"><span>컨설팅</span></button></li>
-			<li><button class="bottom_menu menu05"><span>그레프</span></button></li>
+			<li>
+				<button class="bottom_menu menu01 on"><span>전체현황</span></button>
+			</li>
+			<li>
+				<button class="bottom_menu menu02"><span>가입현황</span></button>
+			</li>
+			<li>
+				<button class="bottom_menu menu03"><span>진단상세</span></button>
+			</li>
+			<li>
+				<button class="bottom_menu menu04"><span>컨설팅</span></button>
+			</li>
+			<li>
+				<button class="bottom_menu menu05"><span>그레프</span></button>
+			</li>
 		</ul>
 	</div>
 	<!-- bottom_fixed_menu_area : e	-->
