--- a/mobile/resources/html/컨설팅전후비교_nodata.html
+++ b/mobile/resources/html/컨설팅전후비교_nodata.html
@@ -12,7 +12,7 @@
 	<script src="/resources/js/lib/animated.js"></script>
 	<script src="/resources/js/gu.renew.common.ui.js"></script>
 	<script>
-		$(function(){
+		$(function () {
 			$(document).on('click', '.consulting_item .toggle_btn_area', function () {
 				var target = $(this).closest(".consulting_item")
 				var targetAll = $(this).closest(".consulting_item").siblings()
@@ -32,7 +32,7 @@
 <div class="wrap full_pop">
 	<div class="top_area">
 		<div class="inner">
-			<a href="#" class="btn_prev"><span class="blind">이전페이지 이동</span></a>
+			<a class="btn_prev" href="#"><span class="blind">이전페이지 이동</span></a>
 			<h1 class="title">컨설팅 전후 비교</h1>
 		</div>
 		<div class="conner_left"></div>
@@ -43,8 +43,7 @@
 		<div class="content_area_sub consulting_wrap">
 			<!-- consulting_top_box : s-->
 			<div class="name">
-				<strong>독고영재</strong> 고객님	보험료와 보장<br>
-				이렇게	바뀌었습니다.
+				<strong>독고영재</strong> 고객님 보험료와 보장<br> 이렇게 바뀌었습니다.
 			</div>
 			<ul class="consulting_top_box">
 				<li class="before">
@@ -77,8 +76,7 @@
 			<!-- consulting_top_box : e-->
 			<!-- consulting_item_box : s-->
 			<div class="consulting_item_box nodata">
-				고객님의 컨설팅 내역이 없습니다.<br>
-				컨설팅을 진행해주세요.
+				고객님의 컨설팅 내역이 없습니다.<br> 컨설팅을 진행해주세요.
 			</div>
 			<!-- consulting_item_box : e-->
 		</div>
