--- a/mobile/resources/html/팝업-가계약 추가.html
+++ b/mobile/resources/html/팝업-가계약 추가.html
@@ -11,7 +11,7 @@
 	<script src="/resources/js/lib/charts.js"></script>
 	<script src="/resources/js/lib/animated.js"></script>
 	<script src="/resources/js/gu.renew.common.ui.js"></script>
-	
+
 </head>
 <body style="background:rgba(0,0,0,0.5)">
 <!-- layer_pop_wrap : s -->
@@ -21,10 +21,9 @@
 			<div class="txt">가계약을 추가하시겠습니까?</div>
 		</div>
 	</div>
-	<div class="layer_pop_bottom">		
+	<div class="layer_pop_bottom">
 		<div class="btn_area">
-			<a class="btn_text fill_gray2" href="#"><span>아니요</span></a>
-			<a class="btn_text fill_red" href="#"><span>예</span></a>
+			<a class="btn_text fill_gray2" href="#"><span>아니요</span></a> <a class="btn_text fill_red" href="#"><span>예</span></a>
 		</div>
 	</div>
 	<a class="btn_close white" href="#"><span>닫기</span></a>
