--- a/mobile/resources/html/팝업-컨설팅전후비교.html
+++ b/mobile/resources/html/팝업-컨설팅전후비교.html
@@ -135,9 +135,7 @@
 		<div class="consulting_wrap">
 			<h3 class="title">
 				<strong>독고영재</strong> 고객님의 보장은 <span class="icon"><img alt=""
-																															 src="/resources/images/gu.renew.contents/icon_state_good.png"></span>
-				맑음<br>
-				컨설팅 이후의 보장이 한결 든든해졌습니다.
+							src="/resources/images/gu.renew.contents/icon_state_good.png"></span> 맑음<br> 컨설팅 이후의 보장이 한결 든든해졌습니다.
 			</h3>
 			<div class="text">보험료와 보장이 이렇게 바뀌었습니다.</div>
 			<div class="box_area">
@@ -156,16 +154,13 @@
 					<div class="graph_area" id="chartdiv1"></div>
 					<ul class="info_box">
 						<li class="no">
-							<span class="tit">미가입</span>
-							<span class="number count">35</span>
+							<span class="tit">미가입</span> <span class="number count">35</span>
 						</li>
 						<li class="lack">
-							<span class="tit">부족</span>
-							<span class="number count">35</span>
+							<span class="tit">부족</span> <span class="number count">35</span>
 						</li>
 						<li class="good">
-							<span class="tit">충분</span>
-							<span class="number count">35</span>
+							<span class="tit">충분</span> <span class="number count">35</span>
 						</li>
 					</ul>
 				</div>
@@ -184,16 +179,13 @@
 					<div class="graph_area" id="chartdiv2"></div>
 					<ul class="info_box">
 						<li class="no">
-							<span class="tit">미가입</span>
-							<span class="number count">35</span>
+							<span class="tit">미가입</span> <span class="number count">35</span>
 						</li>
 						<li class="lack">
-							<span class="tit">부족</span>
-							<span class="number count">35</span>
+							<span class="tit">부족</span> <span class="number count">35</span>
 						</li>
 						<li class="good">
-							<span class="tit">충분</span>
-							<span class="number count">35</span>
+							<span class="tit">충분</span> <span class="number count">35</span>
 						</li>
 					</ul>
 				</div>
