--- a/web/resources/html/index.html
+++ b/web/resources/html/index.html
@@ -53,8 +53,7 @@
 				<h1 class="logo"><a href="#"><img alt="meritz 메리츠 화재" src="/resources/images/gu.renew.common/main_logo.png"></a>
 				</h1>
 				<div class="name_area">
-					<strong class="name">홍길동</strong> 설계사님<br>
-					반갑습니다.
+					<strong class="name">홍길동</strong> 설계사님<br> 반갑습니다.
 				</div>
 				<div class="many_area">설계사님의 고객은 <strong class="many">163</strong>명 입니다.</div>
 				<div class="info_text">오늘은<br>어떤 고객님과 마주 할까요?</div>
@@ -63,14 +62,12 @@
 					<li>
 						<a href="#">
 							<span class="icon"><img alt="" src="/resources/images/gu.renew.common/main_left_icon_01.png"></span>
-							<span class="text">고객등록</span>
-						</a>
+							<span class="text">고객등록</span> </a>
 					</li>
 					<li>
 						<a href="#">
 							<span class="icon"><img alt="" src="/resources/images/gu.renew.common/main_left_icon_02.png"></span>
-							<span class="text">권장금액 담보군 설정</span>
-						</a>
+							<span class="text">권장금액 담보군 설정</span> </a>
 					</li>
 				</ul>
 			</div>
@@ -92,20 +89,17 @@
 						<ul class="sorting_list">
 							<li>
 								<div class="check_box_set bg_type">
-									<input id="checkbox1" type="checkbox">
-									<label for="checkbox1">즐겨찾기</label>
+									<input id="checkbox1" type="checkbox"> <label for="checkbox1">즐겨찾기</label>
 								</div>
 							</li>
 							<li>
 								<div class="check_box_set bg_type">
-									<input id="checkbox2" type="checkbox">
-									<label for="checkbox2">동의종료D-7</label>
+									<input id="checkbox2" type="checkbox"> <label for="checkbox2">동의종료D-7</label>
 								</div>
 							</li>
 							<li>
 								<div class="check_box_set bg_type">
-									<input id="checkbox3" type="checkbox">
-									<label for="checkbox3">보장분석</label>
+									<input id="checkbox3" type="checkbox"> <label for="checkbox3">보장분석</label>
 								</div>
 							</li>
 						</ul>
@@ -115,13 +109,10 @@
 						<ul class="info">
 							<li class="name">독고영재</li>
 							<li class="text">
-								<span class="bday">1981.05.31</span>
-								<span class="sex">남</span>
-								<span class="age">32세</span>
+								<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 							</li>
 							<li class="btn_area">
-								<span class="btn_icon favorites on">즐겨찾기</span>
-								<span class="btn_icon statistics">통계</span>
+								<span class="btn_icon favorites on">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 								<span class="btn_icon sms">문자</span>
 							</li>
 							<li class="date">
@@ -153,13 +144,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -186,13 +174,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -219,13 +204,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -252,13 +234,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -285,13 +264,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -318,13 +294,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -351,13 +324,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -384,13 +354,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -417,13 +384,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -450,13 +414,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -529,20 +490,17 @@
 				<ul class="sorting_list">
 					<li>
 						<div class="check_box_set">
-							<input id="checkboxm_1" type="checkbox">
-							<label for="checkboxm_1">즐겨찾기</label>
+							<input id="checkboxm_1" type="checkbox"> <label for="checkboxm_1">즐겨찾기</label>
 						</div>
 					</li>
 					<li>
 						<div class="check_box_set">
-							<input id="checkboxm_2" type="checkbox">
-							<label for="checkboxm_2">동의종료D-7</label>
+							<input id="checkboxm_2" type="checkbox"> <label for="checkboxm_2">동의종료D-7</label>
 						</div>
 					</li>
 					<li>
 						<div class="check_box_set">
-							<input id="checkboxm_3" type="checkbox">
-							<label for="checkboxm_3">보장분석</label>
+							<input id="checkboxm_3" type="checkbox"> <label for="checkboxm_3">보장분석</label>
 						</div>
 					</li>
 				</ul>
