--- a/web/resources/html/sub.html
+++ b/web/resources/html/sub.html
@@ -37,20 +37,17 @@
 						<ul class="sorting_list">
 							<li>
 								<div class="check_box_set bg_type">
-									<input id="checkbox1" type="checkbox">
-									<label for="checkbox1">즐겨찾기</label>
+									<input id="checkbox1" type="checkbox"> <label for="checkbox1">즐겨찾기</label>
 								</div>
 							</li>
 							<li>
 								<div class="check_box_set bg_type">
-									<input id="checkbox2" type="checkbox">
-									<label for="checkbox2">동의종료D-7</label>
+									<input id="checkbox2" type="checkbox"> <label for="checkbox2">동의종료D-7</label>
 								</div>
 							</li>
 							<li>
 								<div class="check_box_set bg_type">
-									<input id="checkbox3" type="checkbox">
-									<label for="checkbox3">보장분석</label>
+									<input id="checkbox3" type="checkbox"> <label for="checkbox3">보장분석</label>
 								</div>
 							</li>
 						</ul>
@@ -60,13 +57,10 @@
 						<ul class="info">
 							<li class="name">독고영재</li>
 							<li class="text">
-								<span class="bday">1981.05.31</span>
-								<span class="sex">남</span>
-								<span class="age">32세</span>
+								<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 							</li>
 							<li class="btn_area">
-								<span class="btn_icon favorites on">즐겨찾기</span>
-								<span class="btn_icon statistics">통계</span>
+								<span class="btn_icon favorites on">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 								<span class="btn_icon sms">문자</span>
 							</li>
 							<li class="date">
@@ -98,13 +92,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -131,13 +122,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -164,13 +152,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -197,13 +182,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -230,13 +212,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -263,13 +242,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -296,13 +272,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -329,13 +302,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -362,13 +332,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -395,13 +362,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -468,12 +432,10 @@
 							<div class="info_area">
 								<button class="favorites on"><span>즐겨찾기</span></button>
 								<h2 class="title">
-									<strong>독고영재</strong> 고객님의 보장분석을<br>
-									쉽고 든든하게 알려드리겠습니다.
+									<strong>독고영재</strong> 고객님의 보장분석을<br> 쉽고 든든하게 알려드리겠습니다.
 								</h2>
 								<div class="text">
-									<span class="bday">1981.05.31</span>
-									<span class="age">32세</span>
+									<span class="bday">1981.05.31</span> <span class="age">32세</span>
 									<button class="alert" onclick="layerPopBoxOpen('popup_info1')"><span>상령일</span></button>
 									<span class="date">11.30</span>
 								</div>
@@ -482,8 +444,7 @@
 								<div class="layer_pop_content">
 									<div class="icon_title">상령일이란</div>
 									<div class="text">
-										보험회사에서 정하는 보험나이로 생년월일에서 6개월 경과시점이 상령일이 되며,<br>
-										보험연령 증가에 따라 상령일 이후 보험료가 증가될수 있습니다.
+										보험회사에서 정하는 보험나이로 생년월일에서 6개월 경과시점이 상령일이 되며,<br> 보험연령 증가에 따라 상령일 이후 보험료가 증가될수 있습니다.
 									</div>
 								</div>
 								<button class="btn_close white" onclick="layerPopBoxClose('popup_info1')"><span>닫기</span></button>
@@ -532,16 +493,13 @@
 								<div class="text">전체 35개 보장중</div>
 								<ul class="info_box">
 									<li class="no">
-										<span class="tit">미가입</span>
-										<span class="number count">2</span>
+										<span class="tit">미가입</span> <span class="number count">2</span>
 									</li>
 									<li class="lack">
-										<span class="tit">부족</span>
-										<span class="number count">5</span>
+										<span class="tit">부족</span> <span class="number count">5</span>
 									</li>
 									<li class="good">
-										<span class="tit">충분</span>
-										<span class="number count">28</span>
+										<span class="tit">충분</span> <span class="number count">28</span>
 									</li>
 								</ul>
 								<div class="graph_area">
