--- a/web/resources/html/가입현황.html
+++ b/web/resources/html/가입현황.html
@@ -36,20 +36,17 @@
 						<ul class="sorting_list">
 							<li>
 								<div class="check_box_set bg_type">
-									<input id="checkbox1" type="checkbox">
-									<label for="checkbox1">즐겨찾기</label>
+									<input id="checkbox1" type="checkbox"> <label for="checkbox1">즐겨찾기</label>
 								</div>
 							</li>
 							<li>
 								<div class="check_box_set bg_type">
-									<input id="checkbox2" type="checkbox">
-									<label for="checkbox2">동의종료D-7</label>
+									<input id="checkbox2" type="checkbox"> <label for="checkbox2">동의종료D-7</label>
 								</div>
 							</li>
 							<li>
 								<div class="check_box_set bg_type">
-									<input id="checkbox3" type="checkbox">
-									<label for="checkbox3">보장분석</label>
+									<input id="checkbox3" type="checkbox"> <label for="checkbox3">보장분석</label>
 								</div>
 							</li>
 						</ul>
@@ -59,13 +56,10 @@
 						<ul class="info">
 							<li class="name">독고영재</li>
 							<li class="text">
-								<span class="bday">1981.05.31</span>
-								<span class="sex">남</span>
-								<span class="age">32세</span>
+								<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 							</li>
 							<li class="btn_area">
-								<span class="btn_icon favorites on">즐겨찾기</span>
-								<span class="btn_icon statistics">통계</span>
+								<span class="btn_icon favorites on">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 								<span class="btn_icon sms">문자</span>
 							</li>
 							<li class="date">
@@ -97,13 +91,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -130,13 +121,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -163,13 +151,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -196,13 +181,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -229,13 +211,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -262,13 +241,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -295,13 +271,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -328,13 +301,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -361,13 +331,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -394,13 +361,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -462,8 +426,7 @@
 				<div class="customer_state_info">
 					<div class="inner">
 						<div class="customer">
-							<strong>독고영재</strong>고객님<br>
-							반갑습니다.
+							<strong>독고영재</strong>고객님<br> 반갑습니다.
 						</div>
 						<div class="contract">
 							<dl>
@@ -481,8 +444,7 @@
 							<dl>
 								<dt>보장현황</dt>
 								<dd>
-									<span class="no_join"><strong>9</strong>미가입</span>
-									<span class="shortage"><strong>14</strong>부족</span>
+									<span class="no_join"><strong>9</strong>미가입</span> <span class="shortage"><strong>14</strong>부족</span>
 									<span class="enough"><strong>3</strong>충분</span>
 								</dd>
 							</dl>
@@ -511,20 +473,16 @@
 								<div class="payment">
 									<ul>
 										<li class="top">
-											<span class="th">매월납20년</span>
-											<span class="td"><strong class="count">1270660</strong>원</span>
+											<span class="th">매월납20년</span> <span class="td"><strong class="count">1270660</strong>원</span>
 										</li>
 										<li>
-											<span class="th">납입횟수</span>
-											<span class="td">122/240회</span>
+											<span class="th">납입횟수</span> <span class="td">122/240회</span>
 										</li>
 										<li>
-											<span class="th">납입률</span>
-											<span class="td">51%</span>
+											<span class="th">납입률</span> <span class="td">51%</span>
 										</li>
 										<li>
-											<span class="th">납입보험료</span>
-											<span class="td">8,421,660원</span>
+											<span class="th">납입보험료</span> <span class="td">8,421,660원</span>
 										</li>
 									</ul>
 								</div>
@@ -540,20 +498,16 @@
 								<div class="payment">
 									<ul>
 										<li class="top">
-											<span class="th">매월납20년</span>
-											<span class="td"><strong class="count">1270660</strong>원</span>
+											<span class="th">매월납20년</span> <span class="td"><strong class="count">1270660</strong>원</span>
 										</li>
 										<li>
-											<span class="th">납입횟수</span>
-											<span class="td">122/240회</span>
+											<span class="th">납입횟수</span> <span class="td">122/240회</span>
 										</li>
 										<li>
-											<span class="th">납입률</span>
-											<span class="td">51%</span>
+											<span class="th">납입률</span> <span class="td">51%</span>
 										</li>
 										<li>
-											<span class="th">납입보험료</span>
-											<span class="td">8,421,660원</span>
+											<span class="th">납입보험료</span> <span class="td">8,421,660원</span>
 										</li>
 									</ul>
 								</div>
@@ -569,20 +523,16 @@
 								<div class="payment">
 									<ul>
 										<li class="top">
-											<span class="th">매월납20년</span>
-											<span class="td"><strong class="count">1270660</strong>원</span>
+											<span class="th">매월납20년</span> <span class="td"><strong class="count">1270660</strong>원</span>
 										</li>
 										<li>
-											<span class="th">납입횟수</span>
-											<span class="td">122/240회</span>
+											<span class="th">납입횟수</span> <span class="td">122/240회</span>
 										</li>
 										<li>
-											<span class="th">납입률</span>
-											<span class="td">51%</span>
+											<span class="th">납입률</span> <span class="td">51%</span>
 										</li>
 										<li>
-											<span class="th">납입보험료</span>
-											<span class="td">8,421,660원</span>
+											<span class="th">납입보험료</span> <span class="td">8,421,660원</span>
 										</li>
 									</ul>
 								</div>
@@ -606,20 +556,16 @@
 								<div class="payment">
 									<ul>
 										<li class="top">
-											<span class="th">일시납20년</span>
-											<span class="td"><strong class="count">1270660</strong>원</span>
+											<span class="th">일시납20년</span> <span class="td"><strong class="count">1270660</strong>원</span>
 										</li>
 										<li>
-											<span class="th">차량번호</span>
-											<span class="td">76마 1234</span>
+											<span class="th">차량번호</span> <span class="td">76마 1234</span>
 										</li>
 										<li>
-											<span class="th">종료일</span>
-											<span class="td">2019.11.11</span>
+											<span class="th">종료일</span> <span class="td">2019.11.11</span>
 										</li>
 										<li>
-											<span class="th">남은기간</span>
-											<span class="td">D-43</span>
+											<span class="th">남은기간</span> <span class="td">D-43</span>
 										</li>
 									</ul>
 								</div>
@@ -638,7 +584,9 @@
 							<button class="insurance disabled">
 								<div class="info">
 									<div class="inner">
-										<div class="logo"><img alt="한화생명" class="grayscale" src="/resources/images/gu.renew.logo/logo_hanwha_life.png"></div>
+										<div class="logo">
+											<img alt="한화생명" class="grayscale" src="/resources/images/gu.renew.logo/logo_hanwha_life.png">
+										</div>
 										<div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
 										<div class="date"><span class="state">실효</span>2009.07.17~2082.07.17</div>
 									</div>
@@ -646,20 +594,16 @@
 								<div class="payment">
 									<ul>
 										<li class="top">
-											<span class="th">매월납20년</span>
-											<span class="td"><strong class="count">1270660</strong>원</span>
+											<span class="th">매월납20년</span> <span class="td"><strong class="count">1270660</strong>원</span>
 										</li>
 										<li>
-											<span class="th">납입횟수</span>
-											<span class="td">122/240회</span>
+											<span class="th">납입횟수</span> <span class="td">122/240회</span>
 										</li>
 										<li>
-											<span class="th">납입률</span>
-											<span class="td">51%</span>
+											<span class="th">납입률</span> <span class="td">51%</span>
 										</li>
 										<li>
-											<span class="th">납입보험료</span>
-											<span class="td">8,421,660원</span>
+											<span class="th">납입보험료</span> <span class="td">8,421,660원</span>
 										</li>
 									</ul>
 								</div>
@@ -667,7 +611,9 @@
 							<button class="insurance disabled">
 								<div class="info">
 									<div class="inner">
-										<div class="logo"><img alt="삼성생명" class="grayscale" src="/resources/images/gu.renew.logo/logo_samsung_life.png"></div>
+										<div class="logo">
+											<img alt="삼성생명" class="grayscale" src="/resources/images/gu.renew.logo/logo_samsung_life.png">
+										</div>
 										<div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
 										<div class="date"><span class="state">해지</span>2009.07.17~2082.07.17</div>
 									</div>
@@ -675,20 +621,16 @@
 								<div class="payment">
 									<ul>
 										<li class="top">
-											<span class="th">매월납20년</span>
-											<span class="td"><strong class="count">1270660</strong>원</span>
+											<span class="th">매월납20년</span> <span class="td"><strong class="count">1270660</strong>원</span>
 										</li>
 										<li>
-											<span class="th">납입횟수</span>
-											<span class="td">122/240회</span>
+											<span class="th">납입횟수</span> <span class="td">122/240회</span>
 										</li>
 										<li>
-											<span class="th">납입률</span>
-											<span class="td">51%</span>
+											<span class="th">납입률</span> <span class="td">51%</span>
 										</li>
 										<li>
-											<span class="th">납입보험료</span>
-											<span class="td">8,421,660원</span>
+											<span class="th">납입보험료</span> <span class="td">8,421,660원</span>
 										</li>
 									</ul>
 								</div>
@@ -700,8 +642,7 @@
 						<div class="note_box">
 							<dl>
 								<dt>유의사항</dt>
-								<dd>상기 내용 중 보험료에 대한 분석은 초회보험료를 납입만기까지 계속 납입하는 기준으로 산출한 것으로 중도에 계약이 변경되거나 특약의 납입기간이
-									상이할 경우 차이가 발생할 수 있습니다. 정확한 내용은 해당 보험회사에 문의해주시기 바랍니다.
+								<dd>상기 내용 중 보험료에 대한 분석은 초회보험료를 납입만기까지 계속 납입하는 기준으로 산출한 것으로 중도에 계약이 변경되거나 특약의 납입기간이 상이할 경우 차이가 발생할 수 있습니다. 정확한 내용은 해당 보험회사에 문의해주시기 바랍니다.
 								</dd>
 								<dd>실손형담보의 보험료는 제외된 금액입니다. 실손형의 경우 갱신형으로 되어 있어 초회보험료와 향후 보험료가 상이하여 책정이 불가능 합니다.</dd>
 							</dl>
