--- a/web/resources/html/그래프.html
+++ b/web/resources/html/그래프.html
@@ -38,20 +38,17 @@
 						<ul class="sorting_list">
 							<li>
 								<div class="check_box_set bg_type">
-									<input id="checkbox1" type="checkbox">
-									<label for="checkbox1">즐겨찾기</label>
+									<input id="checkbox1" type="checkbox"> <label for="checkbox1">즐겨찾기</label>
 								</div>
 							</li>
 							<li>
 								<div class="check_box_set bg_type">
-									<input id="checkbox2" type="checkbox">
-									<label for="checkbox2">동의종료D-7</label>
+									<input id="checkbox2" type="checkbox"> <label for="checkbox2">동의종료D-7</label>
 								</div>
 							</li>
 							<li>
 								<div class="check_box_set bg_type">
-									<input id="checkbox3" type="checkbox">
-									<label for="checkbox3">보장분석</label>
+									<input id="checkbox3" type="checkbox"> <label for="checkbox3">보장분석</label>
 								</div>
 							</li>
 						</ul>
@@ -61,13 +58,10 @@
 						<ul class="info">
 							<li class="name">독고영재</li>
 							<li class="text">
-								<span class="bday">1981.05.31</span>
-								<span class="sex">남</span>
-								<span class="age">32세</span>
+								<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 							</li>
 							<li class="btn_area">
-								<span class="btn_icon favorites on">즐겨찾기</span>
-								<span class="btn_icon statistics">통계</span>
+								<span class="btn_icon favorites on">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 								<span class="btn_icon sms">문자</span>
 							</li>
 							<li class="date">
@@ -99,13 +93,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -132,13 +123,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -165,13 +153,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -198,13 +183,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -231,13 +213,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -264,13 +243,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -297,13 +273,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -330,13 +303,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -363,13 +333,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -396,13 +363,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -464,8 +428,7 @@
 				<div class="customer_state_info">
 					<div class="inner">
 						<div class="customer">
-							<strong>독고영재</strong>고객님<br>
-							반갑습니다.
+							<strong>독고영재</strong>고객님<br> 반갑습니다.
 						</div>
 						<div class="contract">
 							<dl>
@@ -483,8 +446,7 @@
 							<dl>
 								<dt>보장현황</dt>
 								<dd>
-									<span class="no_join"><strong>9</strong>미가입</span>
-									<span class="shortage"><strong>14</strong>부족</span>
+									<span class="no_join"><strong>9</strong>미가입</span> <span class="shortage"><strong>14</strong>부족</span>
 									<span class="enough"><strong>3</strong>충분</span>
 								</dd>
 							</dl>
