--- a/web/resources/html/컨설팅.html
+++ b/web/resources/html/컨설팅.html
@@ -34,20 +34,17 @@
 						<ul class="sorting_list">
 							<li>
 								<div class="check_box_set bg_type">
-									<input id="checkbox1" type="checkbox">
-									<label for="checkbox1">즐겨찾기</label>
+									<input id="checkbox1" type="checkbox"> <label for="checkbox1">즐겨찾기</label>
 								</div>
 							</li>
 							<li>
 								<div class="check_box_set bg_type">
-									<input id="checkbox2" type="checkbox">
-									<label for="checkbox2">동의종료D-7</label>
+									<input id="checkbox2" type="checkbox"> <label for="checkbox2">동의종료D-7</label>
 								</div>
 							</li>
 							<li>
 								<div class="check_box_set bg_type">
-									<input id="checkbox3" type="checkbox">
-									<label for="checkbox3">보장분석</label>
+									<input id="checkbox3" type="checkbox"> <label for="checkbox3">보장분석</label>
 								</div>
 							</li>
 						</ul>
@@ -57,13 +54,10 @@
 						<ul class="info">
 							<li class="name">독고영재</li>
 							<li class="text">
-								<span class="bday">1981.05.31</span>
-								<span class="sex">남</span>
-								<span class="age">32세</span>
+								<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 							</li>
 							<li class="btn_area">
-								<span class="btn_icon favorites on">즐겨찾기</span>
-								<span class="btn_icon statistics">통계</span>
+								<span class="btn_icon favorites on">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 								<span class="btn_icon sms">문자</span>
 							</li>
 							<li class="date">
@@ -95,13 +89,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -128,13 +119,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -161,13 +149,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -194,13 +179,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -227,13 +209,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -260,13 +239,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -293,13 +269,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -326,13 +299,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -359,13 +329,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -392,13 +359,10 @@
 										<button class="name"><span>홍길동</span></button>
 										<ul class="info">
 											<li class="text">
-												<span class="bday">1981.05.31</span>
-												<span class="sex">남</span>
-												<span class="age">32세</span>
+												<span class="bday">1981.05.31</span> <span class="sex">남</span> <span class="age">32세</span>
 											</li>
 											<li class="btn_area">
-												<span class="btn_icon favorites">즐겨찾기</span>
-												<span class="btn_icon statistics">통계</span>
+												<span class="btn_icon favorites">즐겨찾기</span> <span class="btn_icon statistics">통계</span>
 												<span class="btn_icon sms">문자</span>
 											</li>
 											<li class="date">
@@ -460,8 +424,7 @@
 				<div class="customer_state_info">
 					<div class="inner">
 						<div class="customer">
-							<strong>독고영재</strong>고객님<br>
-							반갑습니다.
+							<strong>독고영재</strong>고객님<br> 반갑습니다.
 						</div>
 						<div class="contract">
 							<dl>
@@ -479,8 +442,7 @@
 							<dl>
 								<dt class="new">보장현황</dt>
 								<dd>
-									<span class="no_join"><strong>9</strong>미가입</span>
-									<span class="shortage"><strong>14</strong>부족</span>
+									<span class="no_join"><strong>9</strong>미가입</span> <span class="shortage"><strong>14</strong>부족</span>
 									<span class="enough"><strong>3</strong>충분</span>
 								</dd>
 							</dl>
@@ -512,8 +474,7 @@
 								<div class="payment">
 									<ul>
 										<li class="top">
-											<span class="th">매월납20년</span>
-											<span class="td"><strong class="count">1270660</strong>원</span>
+											<span class="th">매월납20년</span> <span class="td"><strong class="count">1270660</strong>원</span>
 										</li>
 									</ul>
 								</div>
@@ -529,8 +490,7 @@
 								<div class="payment">
 									<ul>
 										<li class="top">
-											<span class="th">매월납20년</span>
-											<span class="td"><strong class="count">1270660</strong>원</span>
+											<span class="th">매월납20년</span> <span class="td"><strong class="count">1270660</strong>원</span>
 										</li>
 									</ul>
 								</div>
@@ -557,20 +517,16 @@
 								<div class="payment">
 									<ul>
 										<li class="top">
-											<span class="th">일시납20년</span>
-											<span class="td"><strong class="count">1270660</strong>원</span>
+											<span class="th">일시납20년</span> <span class="td"><strong class="count">1270660</strong>원</span>
 										</li>
 										<li>
-											<span class="th">차량번호</span>
-											<span class="td">76마 1234</span>
+											<span class="th">차량번호</span> <span class="td">76마 1234</span>
 										</li>
 										<li>
-											<span class="th">종료일</span>
-											<span class="td">2019.11.11</span>
+											<span class="th">종료일</span> <span class="td">2019.11.11</span>
 										</li>
 										<li>
-											<span class="th">남은기간</span>
-											<span class="td">D-43</span>
+											<span class="th">남은기간</span> <span class="td">D-43</span>
 										</li>
 									</ul>
 								</div>
@@ -586,20 +542,16 @@
 								<div class="payment">
 									<ul>
 										<li class="top">
-											<span class="th">일시납20년</span>
-											<span class="td"><strong class="count">1270660</strong>원</span>
+											<span class="th">일시납20년</span> <span class="td"><strong class="count">1270660</strong>원</span>
 										</li>
 										<li>
-											<span class="th">차량번호</span>
-											<span class="td">76마 1234</span>
+											<span class="th">차량번호</span> <span class="td">76마 1234</span>
 										</li>
 										<li>
-											<span class="th">종료일</span>
-											<span class="td">2019.11.11</span>
+											<span class="th">종료일</span> <span class="td">2019.11.11</span>
 										</li>
 										<li>
-											<span class="th">남은기간</span>
-											<span class="td">D-43</span>
+											<span class="th">남은기간</span> <span class="td">D-43</span>
 										</li>
 									</ul>
 								</div>
