--- a/web/resources/html/팝업-가계약 추가.html
+++ b/web/resources/html/팝업-가계약 추가.html
@@ -29,8 +29,7 @@
 			<div>가계약을 추가하시겠습니까?</div>
 		</div>
 		<div class="btn_area">
-			<a class="btn_text" href="#"><span>아니요</span></a>
-			<a class="btn_text fill_red" href="#"><span>예</span></a>
+			<a class="btn_text" href="#"><span>아니요</span></a> <a class="btn_text fill_red" href="#"><span>예</span></a>
 		</div>
 	</div>
 	<a class="btn_close white" href="#"><span>닫기</span></a>
