--- a/web/resources/html/팝업-가계약조회리스트.html
+++ b/web/resources/html/팝업-가계약조회리스트.html
@@ -37,26 +37,22 @@
 			<ul class="sorting_list">
 				<li>
 					<div class="radio_set">
-						<input id="radio1" name="search_condition" type="radio">
-						<label for="radio1">당일</label>
+						<input id="radio1" name="search_condition" type="radio"> <label for="radio1">당일</label>
 					</div>
 				</li>
 				<li>
 					<div class="radio_set">
-						<input id="radio2" name="search_condition" type="radio">
-						<label for="radio2">1주일</label>
+						<input id="radio2" name="search_condition" type="radio"> <label for="radio2">1주일</label>
 					</div>
 				</li>
 				<li>
 					<div class="radio_set">
-						<input checked id="radio3" name="search_condition" type="radio">
-						<label for="radio3">1개월</label>
+						<input checked id="radio3" name="search_condition" type="radio"> <label for="radio3">1개월</label>
 					</div>
 				</li>
 				<li>
 					<div class="radio_set">
-						<input id="radio4" name="search_condition" type="radio">
-						<label for="radio4">당월</label>
+						<input id="radio4" name="search_condition" type="radio"> <label for="radio4">당월</label>
 					</div>
 				</li>
 			</ul>
@@ -76,16 +72,13 @@
 						<div class="payment">
 							<ul>
 								<li class="top">
-									<span class="th">보험료</span>
-									<span class="td"><strong>1,000,000</strong>원</span>
+									<span class="th">보험료</span> <span class="td"><strong>1,000,000</strong>원</span>
 								</li>
 								<li>
-									<span class="th">납입만기</span>
-									<span class="td">20년(100세)</span>
+									<span class="th">납입만기</span> <span class="td">20년(100세)</span>
 								</li>
 								<li>
-									<span class="th">청약일</span>
-									<span class="td">2019.10.14</span>
+									<span class="th">청약일</span> <span class="td">2019.10.14</span>
 								</li>
 							</ul>
 						</div>
@@ -103,16 +96,13 @@
 						<div class="payment">
 							<ul>
 								<li class="top">
-									<span class="th">보험료</span>
-									<span class="td"><strong>1,000,000</strong>원</span>
+									<span class="th">보험료</span> <span class="td"><strong>1,000,000</strong>원</span>
 								</li>
 								<li>
-									<span class="th">납입만기</span>
-									<span class="td">20년(100세)</span>
+									<span class="th">납입만기</span> <span class="td">20년(100세)</span>
 								</li>
 								<li>
-									<span class="th">청약일</span>
-									<span class="td">2019.10.14</span>
+									<span class="th">청약일</span> <span class="td">2019.10.14</span>
 								</li>
 							</ul>
 						</div>
@@ -130,16 +120,13 @@
 						<div class="payment">
 							<ul>
 								<li class="top">
-									<span class="th">보험료</span>
-									<span class="td"><strong>1,000,000</strong>원</span>
+									<span class="th">보험료</span> <span class="td"><strong>1,000,000</strong>원</span>
 								</li>
 								<li>
-									<span class="th">납입만기</span>
-									<span class="td">20년(100세)</span>
+									<span class="th">납입만기</span> <span class="td">20년(100세)</span>
 								</li>
 								<li>
-									<span class="th">청약일</span>
-									<span class="td">2019.10.14</span>
+									<span class="th">청약일</span> <span class="td">2019.10.14</span>
 								</li>
 							</ul>
 						</div>
@@ -157,16 +144,13 @@
 						<div class="payment">
 							<ul>
 								<li class="top">
-									<span class="th">보험료</span>
-									<span class="td"><strong>1,000,000</strong>원</span>
+									<span class="th">보험료</span> <span class="td"><strong>1,000,000</strong>원</span>
 								</li>
 								<li>
-									<span class="th">납입만기</span>
-									<span class="td">20년(100세)</span>
+									<span class="th">납입만기</span> <span class="td">20년(100세)</span>
 								</li>
 								<li>
-									<span class="th">청약일</span>
-									<span class="td">2019.10.14</span>
+									<span class="th">청약일</span> <span class="td">2019.10.14</span>
 								</li>
 							</ul>
 						</div>
@@ -184,16 +168,13 @@
 						<div class="payment">
 							<ul>
 								<li class="top">
-									<span class="th">보험료</span>
-									<span class="td"><strong>1,000,000</strong>원</span>
+									<span class="th">보험료</span> <span class="td"><strong>1,000,000</strong>원</span>
 								</li>
 								<li>
-									<span class="th">납입만기</span>
-									<span class="td">20년(100세)</span>
+									<span class="th">납입만기</span> <span class="td">20년(100세)</span>
 								</li>
 								<li>
-									<span class="th">청약일</span>
-									<span class="td">2019.10.14</span>
+									<span class="th">청약일</span> <span class="td">2019.10.14</span>
 								</li>
 							</ul>
 						</div>
