--- a/web/resources/html/팝업-보장상세내역.html
+++ b/web/resources/html/팝업-보장상세내역.html
@@ -59,18 +59,15 @@
 								<div class="bar_rail">
 									<div class="bar" data-value="56%"><span class="percent"><em class="count">56</em>%</span></div>
 								</div>
-								<span class="now"><strong>122</strong>회</span>
-								<span class="last"><strong>240</strong>회</span>
+								<span class="now"><strong>122</strong>회</span> <span class="last"><strong>240</strong>회</span>
 							</div>
 						</div>
 						<ul class="pay_list">
 							<li>
-								<span class="tit">납입완료</span>
-								<span class="txt complete"><strong class="count">1559720</strong>원</span>
+								<span class="tit">납입완료</span> <span class="txt complete"><strong class="count">1559720</strong>원</span>
 							</li>
 							<li>
-								<span class="tit">납입횟수</span>
-								<span class="txt"><strong class="count">800748</strong>원</span>
+								<span class="tit">납입횟수</span> <span class="txt"><strong class="count">800748</strong>원</span>
 							</li>
 						</ul>
 						<p class="text">갱신 등이 반영되지 않은 단순 예상 보험료</p>
@@ -330,11 +327,9 @@
 			<div class="note_box">
 				<dl>
 					<dt>유의사항</dt>
-					<dd>상기 내용 중 보험료에 대한 분석은 조회보험료를 납입만기까지 계속 납입하는 기준으로 산출한 것으로 중도에 계약이변경되거나
-						특약의 납입기간이 상이할 경우 차이가 발생할 수 있습니다. 정확한 내용은 해당 보험회사에 문의해주시기 바랍니다.
+					<dd>상기 내용 중 보험료에 대한 분석은 조회보험료를 납입만기까지 계속 납입하는 기준으로 산출한 것으로 중도에 계약이변경되거나 특약의 납입기간이 상이할 경우 차이가 발생할 수 있습니다. 정확한 내용은 해당 보험회사에 문의해주시기 바랍니다.
 					</dd>
-					<dd>실손형담보의 보험료는 제외된 금액입니다. 실손형의 경우 갱신형으로 되어 있어 초회보험료와 향후 보험료가 상이하여 책정이
-						불가능 합니다.
+					<dd>실손형담보의 보험료는 제외된 금액입니다. 실손형의 경우 갱신형으로 되어 있어 초회보험료와 향후 보험료가 상이하여 책정이 불가능 합니다.
 					</dd>
 				</dl>
 			</div>
