--- a/web/resources/html/팝업-컨설팅전후비교.html
+++ b/web/resources/html/팝업-컨설팅전후비교.html
@@ -44,9 +44,7 @@
 				<!-- consulting_top_box : s-->
 				<ul class="consulting_top_box">
 					<li class="name">
-						<span><strong>독고영재</strong> 고객님</span>
-						보험료와 보장 이렇게<br>
-						바뀌었습니다.
+						<span><strong>독고영재</strong> 고객님</span> 보험료와 보장 이렇게<br> 바뀌었습니다.
 					</li>
 					<li class="before">
 						<div class="title">컨설팅 전</div>
