--- a/mobile/resources/html/가입현황-상세내역.html
+++ b/mobile/resources/html/가입현황-상세내역.html
@@ -12,9 +12,9 @@
 	<script src="/resources/js/lib/animated.js"></script>
 	<script src="/resources/js/gu.renew.common.ui.js"></script>
 	<script>
-		$(function(){			
+		$(function () {
 			//가입현황 상세내역 탭
-			$(document).on("click", ".tab_list .tab", function(){
+			$(document).on("click", ".tab_list .tab", function () {
 				var target = $(this);
 				var targetCont = $('.insurance_detail_tab_cont .tab_cont');
 				var idx = $(this).parent().index();
@@ -36,7 +36,7 @@
 <div class="wrap full_pop">
 	<div class="top_area">
 		<div class="inner">
-			<a href="#" class="btn_prev"><span class="blind">이전페이지 이동</span></a>
+			<a class="btn_prev" href="#"><span class="blind">이전페이지 이동</span></a>
 			<h1 class="title">무배당 알파 Plus 보장보험(Ⅱ) 0904</h1>
 		</div>
 		<div class="conner_left"></div>
@@ -51,7 +51,8 @@
 					<div class="payment_info">
 						<div class="payment"><strong>69,030</strong>원</div>
 						<div class="info"><span class="tit">매월납</span> <span class="txt"><strong>12</strong>년</span></div>
-						<div class="logo"><img alt="한화생명" class="grayscale" src="/resources/images/gu.renew.logo/logo_lifeplanet_life.png"></div>
+						<div class="logo">
+							<img alt="한화생명" class="grayscale" src="/resources/images/gu.renew.logo/logo_lifeplanet_life.png"></div>
 					</div>
 					<div class="count_bar_box">
 						<div class="bar_rail">
@@ -67,7 +68,7 @@
 								<div class="txt">납입예정 <strong>118,559,750</strong>원</div>
 							</div>
 						</div>
-						<div class="point_txt">*갱신 등이 반영되지 않은 단순 예상 보험료</div>						
+						<div class="point_txt">*갱신 등이 반영되지 않은 단순 예상 보험료</div>
 					</div>
 					<div class="etc_info">
 						<div class="left_txt">
@@ -104,8 +105,7 @@
 										<div class="info">상해+질병 외래의료비</div>
 									</div>
 									<div class="state_info">
-										<span class="state">정상</span>
-										<span class="info">2천만원</span>
+										<span class="state">정상</span> <span class="info">2천만원</span>
 									</div>
 								</div>
 							</li>
@@ -116,8 +116,7 @@
 										<div class="info">상해+질병 외래의료비</div>
 									</div>
 									<div class="state_info">
-										<span class="state cancel">해지</span>
-										<span class="info">2천만원</span>
+										<span class="state cancel">해지</span> <span class="info">2천만원</span>
 									</div>
 								</div>
 							</li>
@@ -128,8 +127,7 @@
 										<div class="info">상해+질병 외래의료비</div>
 									</div>
 									<div class="state_info">
-										<span class="state">정상</span>
-										<span class="info">2천만원</span>
+										<span class="state">정상</span> <span class="info">2천만원</span>
 									</div>
 								</div>
 							</li>
@@ -140,8 +138,7 @@
 										<div class="info">상해+질병 외래의료비</div>
 									</div>
 									<div class="state_info">
-										<span class="state">정상</span>
-										<span class="info">2천만원</span>
+										<span class="state">정상</span> <span class="info">2천만원</span>
 									</div>
 								</div>
 							</li>
@@ -152,8 +149,7 @@
 										<div class="info">상해+질병 외래의료비</div>
 									</div>
 									<div class="state_info">
-										<span class="state">정상</span>
-										<span class="info">2천만원</span>
+										<span class="state">정상</span> <span class="info">2천만원</span>
 									</div>
 								</div>
 							</li>
@@ -164,8 +160,7 @@
 										<div class="info">상해+질병 외래의료비</div>
 									</div>
 									<div class="state_info">
-										<span class="state">정상</span>
-										<span class="info">2천만원</span>
+										<span class="state">정상</span> <span class="info">2천만원</span>
 									</div>
 								</div>
 							</li>
@@ -176,8 +171,7 @@
 										<div class="info">상해+질병 외래의료비</div>
 									</div>
 									<div class="state_info">
-										<span class="state">정상</span>
-										<span class="info">2천만원</span>
+										<span class="state">정상</span> <span class="info">2천만원</span>
 									</div>
 								</div>
 							</li>
@@ -188,8 +182,7 @@
 										<div class="info">상해+질병 외래의료비</div>
 									</div>
 									<div class="state_info">
-										<span class="state">정상</span>
-										<span class="info">2천만원</span>
+										<span class="state">정상</span> <span class="info">2천만원</span>
 									</div>
 								</div>
 							</li>
@@ -204,8 +197,7 @@
 										<div class="info">상해+질병 외래의료비</div>
 									</div>
 									<div class="state_info">
-										<span class="state">정상</span>
-										<span class="info">2천만원</span>
+										<span class="state">정상</span> <span class="info">2천만원</span>
 									</div>
 								</div>
 							</li>
@@ -216,8 +208,7 @@
 										<div class="info">상해+질병 외래의료비</div>
 									</div>
 									<div class="state_info">
-										<span class="state">정상</span>
-										<span class="info">2천만원</span>
+										<span class="state">정상</span> <span class="info">2천만원</span>
 									</div>
 								</div>
 							</li>
@@ -228,8 +219,7 @@
 										<div class="info">상해+질병 외래의료비</div>
 									</div>
 									<div class="state_info">
-										<span class="state">정상</span>
-										<span class="info">2천만원</span>
+										<span class="state">정상</span> <span class="info">2천만원</span>
 									</div>
 								</div>
 							</li>
@@ -240,8 +230,7 @@
 				<div class="note_box">
 					<dl>
 						<dt>유의사항</dt>
-						<dd>상기 내용 중 보험료에 대한 분석은 초회보험료를 납입만기까지 계속 납입하는 기준으로 산출한 것으로 중도에 계약이 변경되거나 특약의 납입기간이 상이할 경우 차이가 발생할 수 있습니다. 
-							정확한 내용은 해당 보험회사에 문의해주시기 바랍니다.
+						<dd>상기 내용 중 보험료에 대한 분석은 초회보험료를 납입만기까지 계속 납입하는 기준으로 산출한 것으로 중도에 계약이 변경되거나 특약의 납입기간이 상이할 경우 차이가 발생할 수 있습니다. 정확한 내용은 해당 보험회사에 문의해주시기 바랍니다.
 						</dd>
 						<dd>실손형보장의 보험료는 제외된 금액입니다. 실손형의 경우 갱신형으로 되어 있어 초회보험료와 향후 보험료가 상이하여 책정이 불가능 합니다.</dd>
 					</dl>
