--- a/mobile/resources/html/가입현황.html
+++ b/mobile/resources/html/가입현황.html
@@ -23,22 +23,17 @@
 		<ul class="menu_area">
 			<li class="home"><a class="home" href="#">홈으로</a></li>
 			<li class="util">
-				<a class="menu01" href="#">등록</a>
-				<a class="menu02" href="#">컨컬팅</a>
-				<a class="menu03" href="#">pdf sample</a>
+				<a class="menu01" href="#">등록</a> <a class="menu02" href="#">컨컬팅</a> <a class="menu03" href="#">pdf sample</a>
 			</li>
 		</ul>
 		<div class="member_info_area">
 			<div class="name">
-				<strong>권은아</strong>
-				고객님
+				<strong>권은아</strong> 고객님
 				<button class="favorites">즐겨찾기</button><!--활성화 class="btn_like on"-->
 			</div>
 			<ul class="info">
 				<li>
-					<span class="sex">여</span>
-					<span class="bday">1981.05.30</span>
-					<span class="age">32세</span>
+					<span class="sex">여</span> <span class="bday">1981.05.30</span> <span class="age">32세</span>
 				</li>
 				<li>
 					<button class="btn_alert">상령일</button>
@@ -82,7 +77,7 @@
 				<div class="tit_box">
 					<h3 class="sort_tit">정상계약</h3><span class="number"><strong>2</strong>건</span>
 				</div>
-				
+
 				<div class="list_box">
 					<a class="insurance" href="#">
 						<div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
@@ -94,18 +89,17 @@
 							</div>
 						</div>
 						<div class="logo"><img alt="한화생명" src="/resources/images/gu.renew.logo/logo_hanwha_life.png"></div>
-					</a>
-					<a class="insurance" href="#">
-						<div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
-						<div class="payment_info">
-							<span class="state">정상</span>
-							<div class="info">
-								<div class="payment"><strong>69,030</strong>원 <span>매월납/12년</span></div>
-								<div class="date">2009.07.17~2082.07.17</div>
-							</div>
+					</a> <a class="insurance" href="#">
+					<div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
+					<div class="payment_info">
+						<span class="state">정상</span>
+						<div class="info">
+							<div class="payment"><strong>69,030</strong>원 <span>매월납/12년</span></div>
+							<div class="date">2009.07.17~2082.07.17</div>
 						</div>
-						<div class="logo"><img alt="한화생명" src="/resources/images/gu.renew.logo/logo_bnp_life.png"></div>
-					</a>
+					</div>
+					<div class="logo"><img alt="한화생명" src="/resources/images/gu.renew.logo/logo_bnp_life.png"></div>
+				</a>
 				</div>
 			</div>
 			<!-- insurance_list : e -->
@@ -137,11 +131,12 @@
 								<div class="date">2009.07.17~2082.07.17</div>
 							</div>
 						</div>
-						<div class="logo"><img alt="한화생명" class="grayscale" src="/resources/images/gu.renew.logo/logo_lifeplanet_life.png"></div>
+						<div class="logo">
+							<img alt="한화생명" class="grayscale" src="/resources/images/gu.renew.logo/logo_lifeplanet_life.png"></div>
 					</a>
-				</div>				
+				</div>
 			</div>
-			<!-- insurance_list : e -->			
+			<!-- insurance_list : e -->
 		</div>
 		<!-- insurance_list_box : e -->
 	</div>
@@ -150,11 +145,21 @@
 	<div class="bottom_fixed_menu_area">
 		<button class="home"><span>고객리스트</span></button>
 		<ul>
-			<li><button class="bottom_menu menu01 on"><span>전체현황</span></button></li>
-			<li><button class="bottom_menu menu02"><span>가입현황</span></button></li>
-			<li><button class="bottom_menu menu03"><span>진단상세</span></button></li>
-			<li><button class="bottom_menu menu04"><span>컨설팅</span></button></li>
-			<li><button class="bottom_menu menu05"><span>그레프</span></button></li>
+			<li>
+				<button class="bottom_menu menu01 on"><span>전체현황</span></button>
+			</li>
+			<li>
+				<button class="bottom_menu menu02"><span>가입현황</span></button>
+			</li>
+			<li>
+				<button class="bottom_menu menu03"><span>진단상세</span></button>
+			</li>
+			<li>
+				<button class="bottom_menu menu04"><span>컨설팅</span></button>
+			</li>
+			<li>
+				<button class="bottom_menu menu05"><span>그레프</span></button>
+			</li>
 		</ul>
 	</div>
 	<!-- bottom_fixed_menu_area : e	-->
