--- a/mobile/resources/html/팝업-가계약조회리스트.html
+++ b/mobile/resources/html/팝업-가계약조회리스트.html
@@ -23,33 +23,29 @@
 			<ul class="sorting_list">
 				<li>
 					<div class="radio_set">
-						<input id="radio1" name="search_condition" type="radio">
-						<label for="radio1">당일</label>
+						<input id="radio1" name="search_condition" type="radio"> <label for="radio1">당일</label>
 					</div>
 				</li>
 				<li>
 					<div class="radio_set">
-						<input id="radio2" name="search_condition" type="radio">
-						<label for="radio2">1주일</label>
+						<input id="radio2" name="search_condition" type="radio"> <label for="radio2">1주일</label>
 					</div>
 				</li>
 				<li>
 					<div class="radio_set">
-						<input id="radio3" name="search_condition" type="radio">
-						<label for="radio3">1개월</label>
+						<input id="radio3" name="search_condition" type="radio"> <label for="radio3">1개월</label>
 					</div>
 				</li>
 				<li>
 					<div class="radio_set">
-						<input id="radio4" name="search_condition" type="radio">
-						<label for="radio4">당월</label>
+						<input id="radio4" name="search_condition" type="radio"> <label for="radio4">당월</label>
 					</div>
 				</li>
 			</ul>
 			<div class="date">2019.09.25 ~2019.10.25</div>
-		</div>	
+		</div>
 		<!-- insurance_list : s -->
-		<div class="insurance_list check_list">			
+		<div class="insurance_list check_list">
 			<div class="list_box">
 				<div class="item">
 					<button class="insurance"><!-- 체크시 class 'checked' 추가  -->
@@ -226,7 +222,7 @@
 		</div>
 		<!-- insurance_list : e -->
 	</div>
-	<div class="layer_pop_bottom">		
+	<div class="layer_pop_bottom">
 		<div class="btn_area">
 			<a class="btn_text fill_red" href="#"><span>확인</span></a>
 		</div>
