--- a/web/resources/html/팝업-권장금액보장군설정.html
+++ b/web/resources/html/팝업-권장금액보장군설정.html
@@ -65,8 +65,7 @@
 				<tr>
 					<td class="align_c">
 						<div class="check_box_set no_label">
-							<input checked id="checkbox1" type="checkbox">
-							<label for="checkbox1"></label>
+							<input checked id="checkbox1" type="checkbox"> <label for="checkbox1"></label>
 						</div>
 					</td>
 					<th>치아,화상,골절</th>
@@ -80,8 +79,7 @@
 				<tr>
 					<td class="align_c">
 						<div class="check_box_set no_label">
-							<input id="checkbox2" type="checkbox">
-							<label for="checkbox2"></label>
+							<input id="checkbox2" type="checkbox"> <label for="checkbox2"></label>
 						</div>
 					</td>
 					<th>사망</th>
@@ -95,8 +93,7 @@
 				<tr>
 					<td class="align_c">
 						<div class="check_box_set no_label">
-							<input id="checkbox3" type="checkbox">
-							<label for="checkbox3"></label>
+							<input id="checkbox3" type="checkbox"> <label for="checkbox3"></label>
 						</div>
 					</td>
 					<th>후유장해</th>
@@ -110,8 +107,7 @@
 				<tr>
 					<td class="align_c">
 						<div class="check_box_set no_label">
-							<input id="checkbox4" type="checkbox">
-							<label for="checkbox4"></label>
+							<input id="checkbox4" type="checkbox"> <label for="checkbox4"></label>
 						</div>
 					</td>
 					<th>치아,화상,골절</th>
@@ -125,8 +121,7 @@
 				<tr>
 					<td class="align_c">
 						<div class="check_box_set no_label">
-							<input checked id="checkbox5" type="checkbox">
-							<label for="checkbox5"></label>
+							<input checked id="checkbox5" type="checkbox"> <label for="checkbox5"></label>
 						</div>
 					</td>
 					<th>치아,화상,골절</th>
@@ -140,8 +135,7 @@
 				<tr>
 					<td class="align_c">
 						<div class="check_box_set no_label">
-							<input id="checkbox6" type="checkbox">
-							<label for="checkbox6"></label>
+							<input id="checkbox6" type="checkbox"> <label for="checkbox6"></label>
 						</div>
 					</td>
 					<th>사망</th>
@@ -155,8 +149,7 @@
 				<tr>
 					<td class="align_c">
 						<div class="check_box_set no_label">
-							<input id="checkbox7" type="checkbox">
-							<label for="checkbox7"></label>
+							<input id="checkbox7" type="checkbox"> <label for="checkbox7"></label>
 						</div>
 					</td>
 					<th>후유장해</th>
@@ -170,8 +163,7 @@
 				<tr>
 					<td class="align_c">
 						<div class="check_box_set no_label">
-							<input id="checkbox8" type="checkbox">
-							<label for="checkbox8"></label>
+							<input id="checkbox8" type="checkbox"> <label for="checkbox8"></label>
 						</div>
 					</td>
 					<th>치아,화상,골절</th>
@@ -185,8 +177,7 @@
 				<tr>
 					<td class="align_c">
 						<div class="check_box_set no_label">
-							<input checked id="checkbox9" type="checkbox">
-							<label for="checkbox9"></label>
+							<input checked id="checkbox9" type="checkbox"> <label for="checkbox9"></label>
 						</div>
 					</td>
 					<th>치아,화상,골절</th>
@@ -200,8 +191,7 @@
 				<tr>
 					<td class="align_c">
 						<div class="check_box_set no_label">
-							<input id="checkbox10" type="checkbox">
-							<label for="checkbox10"></label>
+							<input id="checkbox10" type="checkbox"> <label for="checkbox10"></label>
 						</div>
 					</td>
 					<th>사망</th>
@@ -215,8 +205,7 @@
 				<tr>
 					<td class="align_c">
 						<div class="check_box_set no_label">
-							<input id="checkbox11" type="checkbox">
-							<label for="checkbox11"></label>
+							<input id="checkbox11" type="checkbox"> <label for="checkbox11"></label>
 						</div>
 					</td>
 					<th>후유장해</th>
@@ -230,8 +219,7 @@
 				<tr>
 					<td class="align_c">
 						<div class="check_box_set no_label">
-							<input id="checkbox12" type="checkbox">
-							<label for="checkbox12"></label>
+							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
 						</div>
 					</td>
 					<th>치아,화상,골절</th>
@@ -245,8 +233,7 @@
 				<tr>
 					<td class="align_c">
 						<div class="check_box_set no_label">
-							<input id="checkbox11" type="checkbox">
-							<label for="checkbox11"></label>
+							<input id="checkbox11" type="checkbox"> <label for="checkbox11"></label>
 						</div>
 					</td>
 					<th>후유장해</th>
@@ -260,8 +247,7 @@
 				<tr>
 					<td class="align_c">
 						<div class="check_box_set no_label">
-							<input id="checkbox12" type="checkbox">
-							<label for="checkbox12"></label>
+							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
 						</div>
 					</td>
 					<th>치아,화상,골절</th>
@@ -276,8 +262,7 @@
 			</table>
 		</div>
 		<div class="btn_area">
-			<a class="btn_text" href="#"><span>설정 초기화</span></a>
-			<a class="btn_text fill_red" href="#"><span>저장</span></a>
+			<a class="btn_text" href="#"><span>설정 초기화</span></a> <a class="btn_text fill_red" href="#"><span>저장</span></a>
 		</div>
 	</div>
 	<a class="btn_close white" href="#"><span>닫기</span></a>
